--- a/index2.html
+++ b/index2.html
@@ -26,229 +26,10 @@
 
 
 
-		<div class="prolific_result">
-
-			<div class="prolific_result_left">
-				<div class="title_prolific">
-					<h2>Ваши результаты</h2>
-				</div>
-
-				<div class="prolific_result_graphic_wrp">
-					<div class="prolific_result_graphic_speedmentr_wrp">
-						<img src="img/26-layers.png" alt="alt">
-						<p>Ваш результат <span>1 категория</span></p>
-					</div>
-					
-					<div class="prolific_result_graphic">
-						<!-- Items -->
-						<div class="prolific_result_graphic_item" style="height: 93%;">
-							<div class="prolific_result_graphic_item_procent">93</div>
-							<div class="prolific_result_graphic_item_fill fill_blue"></div>
-							<div class="prolific_result_graphic_item_name">Результативность</div>
-						</div>
-						<!-- END Items -->
-						<!-- Items -->
-						<div class="prolific_result_graphic_item" style="height: 88%;">
-							<div class="prolific_result_graphic_item_procent">88</div>
-							<div class="prolific_result_graphic_item_fill fill_opacity_blue"></div>
-							<div class="prolific_result_graphic_item_name">тестирование</div>
-						</div>
-						<!-- END Items -->						
-						<!-- Items -->
-						<div class="prolific_result_graphic_item" style="height: 11%;">
-							<div class="prolific_result_graphic_item_procent">11</div>
-							<div class="prolific_result_graphic_item_fill fill_pink"></div>
-							<div class="prolific_result_graphic_item_name">оценка руководителя</div>
-						</div>
-						<!-- END Items -->
-					</div>
-				</div>
-			</div>
-
-
-			<div class="prolific_result_right">
-				<h3>Описание ваших результатов</h3>
-				<p>Чтобы ознакомиться с подробным
-				описанием ваших результатов,
-				скачайте описание оценки результатов
-				урожайной недели по вашей должности
-				в формает PDF.</p>
-				<a href="#">
-					<img src="img/icons/pdf.svg" alt="icon">
-					<span>Описание оценки урожайная неделя</span>
-				</a>
-			</div>
-		</div>
-
-
-
-		<div class="prolific_dinamic">
-
+		<div class="prolific_your_result">
+			
 			<div class="title_prolific">
-				<h2>Ваша динамика</h2>
-			</div>
-
-
-			<div class="prolific_dinamic_graphic">
-				<div class="prolific_dinamic_graphic_description">
-					<ul>
-						<li>
-							<span class="circle circle_blue"></span>
-							<span>Результативность</span>
-						</li>
-						<li>
-							<span class="circle circle_opacity_blue"></span>
-							<span>Тестировние</span>
-						</li>
-						<li>
-							<span class="circle circle_pink"></span>
-							<span>Оценка руководителя</span>
-						</li>
-					</ul>
-				</div>
-
-				<div class="prolific_dinamic_graphic_items">
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<ul>
-								<li style="height: 93%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">93</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_blue"></div>
-								</li>
-								<li style="height: 88%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">88</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_opacity_blue"></div>
-								</li>
-								<li style="height: 11%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">11</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_pink"></div>
-								</li>
-							</ul>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2015</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<ul>
-								<li style="height: 93%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">93</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_blue"></div>
-								</li>
-								<li style="height: 88%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">88</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_opacity_blue"></div>
-								</li>
-								<li style="height: 20%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">20</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_pink"></div>
-								</li>
-							</ul>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН апрель 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<ul>
-								<li style="height: 100%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">100</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_blue"></div>
-								</li>
-								<li style="height: 88%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">88</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_opacity_blue"></div>
-								</li>
-								<li style="height: 20%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">20</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_pink"></div>
-								</li>
-							</ul>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item not_go_wrp">
-						<div class="prolific_dinamic_graphic_item_row not_go">Не участвовал</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<ul>
-								<li style="height: 100%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">100</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_blue"></div>
-								</li>
-								<li style="height: 88%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">88</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_opacity_blue"></div>
-								</li>
-								<li style="height: 20%;">
-									<div class="prolific_dinamic_graphic_item_row__procent">20</div>
-									<div class="prolific_dinamic_graphic_item_row__fill fill_pink"></div>
-								</li>
-							</ul>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2017</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<div class="prolific_dinamic_graphic_item_row_category">
-								<div class="catecory_circle"></div>
-								<p class="category_name">Базовая категория</p>
-							</div>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2015</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<div class="prolific_dinamic_graphic_item_row_category">
-								<div class="catecory_circle catecory_circle_1">1</div>
-								<p class="category_name">1 категория</p>
-							</div>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН апрель 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<div class="prolific_dinamic_graphic_item_row_category">
-								<div class="catecory_circle catecory_circle_2">2</div>
-								<p class="category_name">2 категория</p>
-							</div>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item not_go_wrp">
-						<div class="prolific_dinamic_graphic_item_row not_go">Не участвовал</div>
-						<div class="prolific_dinamic_graphic_item_name">УН октябрь 2016</div>
-					</div>
-					<!-- END Item -->
-					<!-- Item -->
-					<div class="prolific_dinamic_graphic_item">
-						<div class="prolific_dinamic_graphic_item_row">
-							<div class="prolific_dinamic_graphic_item_row_category">
-								<div class="catecory_circle catecory_circle_1">1</div>
-								<p class="category_name">1 категория</p>
-							</div>
-						</div>
-						<div class="prolific_dinamic_graphic_item_name">УН апрель 2016</div>
-					</div>
-					<!-- END Item -->
-				</div>
+				<h2>Ваши результаты</h2>
 			</div>
 
 		</div>
