--- a/head.html
+++ b/head.html
@@ -526,13 +526,13 @@
 							<div class="prolific_employee_rating__filter_search">
 								<div class="filter_input_wrapper">
 									<input type="text" name="search" placeholder="Введите ваш запрос">
-									<button tabindex="-1">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
+									<div class="btn_submit_filter">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 							</div>
 
@@ -542,37 +542,37 @@
 								<div class="filter_input_wrapper">
 									<label for="f-1">Макрорегион</label>
 									<input type="text" id="f-1" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
+									<div class="btn_submit_filter">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper">
 									<label for="f-2">Областной центр</label>
 									<input type="text" id="f-2" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
+									<div class="btn_submit_filter">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper">
 									<label for="f-3">Должность</label>
 									<input type="text" id="f-3" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
-										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
+									<div class="btn_submit_filter">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper dinamic_flter_employee_rating js-flter_employee">
@@ -761,49 +761,49 @@
 
 								<div class="filter_input_wrapper filter_input_wrapper_search">
 									<input type="text" name="search" placeholder="Введите ваш запрос">
-									<button tabindex="-1">
+									<div class="btn_submit_filter">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper">
 									<label for="f--1">Макрорегион</label>
 									<input type="text" id="f--1" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
+									<div class="btn_submit_filter">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper">
 									<label for="f--2">Областной центр</label>
 									<input type="text" id="f--2" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
+									<div class="btn_submit_filter">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 								<div class="filter_input_wrapper">
 									<label for="f--3">Должность</label>
 									<input type="text" id="f--3" name="search" placeholder="Введите текст">
-									<button tabindex="-1">
+									<div class="btn_submit_filter">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 472.615 472.615" style="enable-background:new 0 0 472.615 472.615;" xml:space="preserve" width="13px" height="13px">
 											<g>
 												<polygon points="472.615,12.908 0,12.908 180.081,202.629 180.066,459.708 292.55,401.525 292.534,202.629   " fill="#f8f8f8"/>
 											</g>
 										</svg>
-									</button>
+									</div>
 								</div>
 
 							</div>
