--- a/head.html
+++ b/head.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=1113">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
 	<title>Document</title>
 	<link rel="stylesheet" href="libs/jqueryui-select/jquery-ui.min.css">
