--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
+	<link rel="shortcut icon" href="img/d.ico" type="image/png">
 	<link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css">
-	<title>Document</title>
+	<title>My Portfolio</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -80,7 +80,10 @@
 							<div class="about_tab__content">
 								<!-- Short history -->
 								<div class="short_history">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ipsam pariatur, modi voluptatem fugiat neque, magnam debitis impedit esse quibusdam rem quam eaque aliquam temporibus assumenda corrupti iusto praesentium iste.</p>
+									<p>Я задротил в игры, игры надоели наткнулся на курс по html/css, курс - прошел, 
+										писал ручкой теги, атрибуты, свойства и их значения на ладони что бы лучше запоминать, 
+										я сверстал боле менее приличный сайт и был в экстазе, после этого понеслась))) 
+										Катки заменились проектами, жизненые приоритеты сместились в сторону web.</p>
 								</div>
 								<!-- END Short history -->
 								<!-- Skills -->
@@ -107,8 +110,12 @@
 											<div class="skills__item_right">&laquo;Нативный DOM + ООП&raquo;</div>
 										</li>
 										<li class="skills__item">
-											<div class="skills__item_left">NODE.JS (Puppeteer - тесты)</div>
-											<div class="skills__item_right">&laquo;Уверенный пользователь&raquo;</div>
+											<div class="skills__item_left">Puppeteer.js тесты</div>
+											<div class="skills__item_right">&laquo;Пишу ботов + парсеры&raquo;</div>
+										</li>
+										<li class="skills__item">
+											<div class="skills__item_left">Vue.js</div>
+											<div class="skills__item_right">&laquo;На этапе осваивания&raquo;</div>
 										</li>
 									</ul>
 								</div>
@@ -229,7 +236,7 @@
 									<label for="message">Введите сообщение</label>
 								</div>
 								<div class="btn_submit_wrp">
-									<button>
+									<button title="При отправке формы вы автоматически соглашаетесь на политику конфиденциальности">
 										<span>Отправить сообщение</span>
 										<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 									</button>
@@ -238,6 +245,7 @@
 
 						</div>
 						<div class="contact__right">
+							<p class="bg_text">My <br>Portfolio</p>
 							
 							<ul class="my_contact">
 								<li>
@@ -267,7 +275,18 @@
 		</div>
 		<!-- END SECTIONS -->
 	</div>
-	
+
+	<div class="loading">
+		<div class="blob-grid">
+			<div class="blob blob-0"></div>
+			<div class="blob blob-1"></div>
+			<div class="blob blob-2"></div>
+			<div class="blob blob-3"></div>
+			<div class="blob blob-4"></div>
+			<div class="blob blob-5"></div>
+		</div>
+	</div>
+
 
 	<!-- Scripts -->
 	<script src="libs/particles.js-master/particles.min.js"></script>
