--- a/single.html
+++ b/single.html
@@ -56,6 +56,9 @@
 			</div>
 		</div>
 	</div>
+	<div class="to_top">
+		<button id="btn_top_top"><i class="fa fa-angle-up"></i></button>
+	</div>
 	<!-- END Header -->
 
 
@@ -77,7 +80,20 @@
 
 		</div>
 		<div class="sidebar">
+			<h3>Последние публикации</h3>
 			<div class="sidebar_last_posts">
+				<div class="sidebar_last_post">
+					<img src="img/pexels-photo-452738-130x130.jpg" alt="photo">
+					<a href="#">This Is A Great Photo And Nice Style For Shooting</a>
+				</div>
+				<div class="sidebar_last_post">
+					<img src="img/pexels-photo-452738-130x130.jpg" alt="photo">
+					<a href="#">This Is A Great Photo And Nice Style For Shooting</a>
+				</div>
+				<div class="sidebar_last_post">
+					<img src="img/pexels-photo-452738-130x130.jpg" alt="photo">
+					<a href="#">This Is A Great Photo And Nice Style For Shooting</a>
+				</div>
 				<div class="sidebar_last_post">
 					<img src="img/pexels-photo-452738-130x130.jpg" alt="photo">
 					<a href="#">This Is A Great Photo And Nice Style For Shooting</a>
@@ -97,7 +113,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut non libero pariatur quis, ab officia accusantium similique cumque esse, soluta nobis modi adipisci, corporis, ipsa tenetur optio ratione reiciendis sunt.</p>
 				</div>
 				<div class="footer_item last_posts">
-					<h3>Последние посты</h3>
+					<h3>Последние публикации</h3>
 					<ul>
 						<li><a href="#">Every people are enjoy with the job that they love</a></li>
 						<li><a href="#">Every people are enjoy with the job that they love</a></li>
