--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Vue.js - Trello</title>
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="/src/img/fiveicon.png">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
