--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Vue.js - Trello</title>
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="/src/img/fiveicon.png">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
   <body>
     <div id="app"></div>
