--- a/index.html
+++ b/index.html
@@ -1,13 +1,305 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Vue.js - Trello</title>
-    <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="/src/img/fiveicon.png">
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=1014">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+	<div class="lk-top">
+		<div class="CENTERER">
+
+			<div class="main_title">
+				<h1>Кабинет руководителя <span>Личный кабинет топ-менеджера</span></h1>
+			</div>
+
+			<section class="ads">
+				<div class="ads_new">
+					<h2>Эффективный генеральный директор - 2017</h2>
+					<p>У вас есть уникальный шанс заявить о своем бизнесе, расширить деловые контакты и узнать секреты управления и профессионального развития. Приглашаем вас стать участником знакового бизнес-события этой весны Практической конференции Эффективный генеральный директор и ХХХVII ЦЕРЕМОНИИ НАГРАЖДЕНИЯ ЛИДЕРОВ ЭКОНОМИКИ СТРАН - УЧАСТНИЦ СОЮЗА НБР</p>
+					<div class="ads_link">
+						<a href="#">Хочу участвовать</a>
+					</div>
+					<div class="ads_label">
+						<div class="ads_label__new">
+							<span class="top"></span>
+							<p class="center">Новое</p>
+							<span class="bottom"></span>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="dynamic_ipr">
+				<div class="dynamic_ipr__left">
+					<div class="title">
+						<h2>Динамика развития по ИПР</h2>
+					</div>
+					<div class="tab_common tab_ipr">
+						<div class="tab_common__nuv">
+							<ul>
+								<li>
+									<a href=".main_dinamic_active" class="tab_common__nuv_active">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="20">
+											<path d="M457.637,134.681c-29.976,0-54.363,24.387-54.363,54.363c0,10.933,3.255,21.114,8.831,29.647l-58.733,58.733    c-8.534-5.576-18.715-8.831-29.648-8.831c-11.329,0-21.858,3.488-30.576,9.441l-59.338-59.347    c5.575-8.533,8.828-18.713,8.828-29.644c0-29.976-24.387-54.363-54.363-54.363c-29.976,0-54.363,24.387-54.363,54.363    c0,10.931,3.254,21.108,8.827,29.641L84.004,277.42c-8.532-5.574-18.711-8.827-29.641-8.827C24.387,268.593,0,292.981,0,322.957    s24.387,54.363,54.363,54.363c29.976,0,54.363-24.387,54.363-54.363c0-10.933-3.255-21.114-8.831-29.648l58.733-58.733    c8.534,5.576,18.715,8.831,29.648,8.831c10.932,0,21.113-3.255,29.646-8.831l59.666,59.674    c-5.206,8.338-8.226,18.174-8.226,28.706c0,29.976,24.387,54.363,54.363,54.363s54.363-24.387,54.363-54.363    c0-10.931-3.254-21.109-8.827-29.641l58.736-58.736c8.533,5.574,18.712,8.827,29.641,8.827c29.976,0,54.363-24.387,54.363-54.363    C512.001,159.066,487.613,134.681,457.637,134.681z M54.363,354.849c-17.586,0-31.893-14.307-31.893-31.892    c0-17.586,14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893C86.256,340.542,71.949,354.849,54.363,354.849z     M188.276,220.936c-17.585,0-31.893-14.307-31.893-31.893c0-17.585,14.307-31.893,31.893-31.893    c17.586,0,31.893,14.307,31.893,31.893C220.169,206.629,205.862,220.936,188.276,220.936z M323.724,354.849    c-17.585,0-31.893-14.307-31.893-31.893s14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893    C355.616,340.542,341.309,354.849,323.724,354.849z M457.637,220.936c-17.585,0-31.893-14.307-31.893-31.893    c0-17.585,14.307-31.893,31.893-31.893c17.585,0,31.893,14.307,31.893,31.893C489.53,206.629,475.222,220.936,457.637,220.936z" fill="#001689"/>
+										</svg>
+										Общая динамика по активностям
+									</a>
+								</li>
+								<li>
+									<a href=".urgent_activities">
+										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"width="20px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve">
+											<g>
+												<path d="M165.494,533.333c-35.545-73.962-16.616-116.343,10.703-156.272c29.917-43.728,37.627-87.013,37.627-87.013   s23.518,30.573,14.11,78.39c41.548-46.25,49.389-119.938,43.115-148.159c93.914,65.63,134.051,207.737,79.96,313.054   c287.695-162.776,71.562-406.339,33.934-433.775c12.543,27.435,14.922,73.88-10.416,96.42C331.635,33.333,225.583,0,225.583,0   c12.543,83.877-45.466,175.596-101.404,244.13c-1.965-33.446-4.053-56.525-21.641-88.531   C98.59,216.357,52.157,265.884,39.583,326.76C22.551,409.2,52.341,469.562,165.494,533.333z" fill="#001689"/>
+											</g>
+										</svg>
+										Срочные активности
+									</a>
+								</li>
+							</ul>
+						</div>
+						<div class="tab_common__content">
+
+							<div class="main_dinamic_active">
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_blue">
+											<img src="img/icons/open-book.png" alt="icon">
+										</div>
+										<span>Книги</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_blue"  style="width: 10%;">
+												<span>10%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 1 из 9</p>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_yellow">
+											<img src="img/icons/class-group.png" alt="icon">
+										</div>
+										<span>Внешние <br>мероприятия</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_yellow"  style="width: 70%;">
+												<span>70%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 7 из 10</p>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_blue_2">
+											<img src="img/icons/play.png" alt="icon">
+										</div>
+										<span>Видео</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_blue_2"  style="width: 100%;">
+												<span>100%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 10 из 10</p>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_pink">
+											<img src="img/icons/case.png" alt="icon">
+										</div>
+										<span>Совместные <br>проекты</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_pink"  style="width: 30%;">
+												<span>30%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 3 из 9</p>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_pink_2">
+											<img src="img/icons/audience.png" alt="icon">
+										</div>
+										<span>Тренинги</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_pink_2"  style="width: 50%;">
+												<span>50%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 5 из 9</p>
+									</div>
+								</div>
+								<!-- end item -->
+								<!-- item -->
+								<div class="main_dinamic_active__item">
+									<div class="main_dinamic_active__name">
+										<div class="icon_wrp line_purple">
+											<img src="img/icons/teacher-reading.png" alt="icon">
+										</div>
+										<span>Коучинг</span>
+									</div>
+									<div class="main_dinamic_active__level">
+										<div class="line_bg">
+											<div class="line line_purple"  style="width: 50%;">
+												<span>50%</span>
+											</div>
+										</div>
+										<p>Выполнено активностей: 5 из 9</p>
+									</div>
+								</div>
+								<!-- end item -->
+							</div>
+
+							<div class="urgent_activities">
+								<table>
+									<thead>
+										<tr>
+											<th>Активность</th>
+											<th>Начало активности</th>
+											<th>Завершить до</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>
+												<div class="urgent_activities__flex">
+													<div class="urgent_activities__icon line_blue">
+														<img src="img/icons/open-book.png" alt="icon">
+													</div>
+													<div class="urgent_activities__name">
+														<span>Книга</span>
+														<p>Айн Рэнд <span>Атлант расправил плечи</span></p>
+													</div>
+												</div>
+											</td>
+											<td class="start">04.06.2018</td>
+											<td class="finish">04.06.2018</td>
+										</tr>
+										<tr>
+											<td>
+												<div class="urgent_activities__flex">
+													<div class="urgent_activities__icon line_blue">
+														<img src="img/icons/open-book.png" alt="icon">
+													</div>
+													<div class="urgent_activities__name">
+														<span>Книга</span>
+														<p>Ричард Брэнсон <span>К черту все! Берись и делай!</span></p>
+													</div>
+												</div>
+											</td>
+											<td class="start">04.06.2018</td>
+											<td class="finish">04.06.2018</td>
+										</tr>
+										<tr>
+											<td>
+												<div class="urgent_activities__flex">
+													<div class="urgent_activities__icon line_yellow">
+														<img src="img/icons/open-book.png" alt="icon">
+													</div>
+													<div class="urgent_activities__name">
+														<span>Внешнее мероприятие</span>
+														<p>Гладуэлл Малкольм <span>Гении и аутсайдеры.</span></p>
+													</div>
+												</div>
+											</td>
+											<td class="start">04.06.2018</td>
+											<td class="finish">04.06.2018</td>
+										</tr>
+										<tr>
+											<td>
+												<div class="urgent_activities__flex">
+													<div class="urgent_activities__icon line_pink_2">
+														<img src="img/icons/open-book.png" alt="icon">
+													</div>
+													<div class="urgent_activities__name">
+														<span>Книга</span>
+														<p>Гладуэлл Малкольм <span>Гении и аутсайдеры.</span></p>
+													</div>
+												</div>
+											</td>
+											<td class="start">04.06.2018</td>
+											<td class="finish">04.06.2018</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="dynamic_ipr__right">
+					<div class="title">
+						<h2>Показатели ИПР</h2>
+					</div>
+					<div class="showers_ipr">
+						<img src="img/user.png" alt="user" class="showers_ipr__img">
+						<!-- item -->
+						<div class="showers_ipr__item">
+							<p>Соблюдение сроков</p>
+							<span>Отлично</span>
+							<div class="showers_ipr__range">
+								<input type="range" min="1" max="3" value="3" name="raiting" disabled>
+							</div>
+						</div>
+						<!-- end item -->
+						<!-- item -->
+						<div class="showers_ipr__item">
+							<p>Вовлеченность</p>
+							<span>2 уровень</span>
+							<div class="showers_ipr__range">
+								<input type="range" min="1" max="5" value="3" name="raiting" disabled>
+							</div>
+						</div>
+						<!-- end item -->
+						<!-- item -->
+						<div class="showers_ipr__item">
+							<p>Процент выполнения ИПР</p>
+							<span>50%</span>
+							<div class="showers_ipr__range">
+								<input type="range" min="1" max="3" value="2" name="raiting" disabled>
+							</div>
+						</div>
+						<!-- end item -->
+						<!-- item -->
+						<div class="showers_ipr__item">
+							<p>Вы являетесь</p>
+							<span>Менти</span>
+							<a href="#">Перейти в раздел менторинга</a>
+						</div>
+						<!-- end item -->
+					</div>
+				</div>
+			</section>
+
+		</div>
+	</div>
+	
+
+	<!-- Scripts -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/common.js"></script>
+</body>
 </html>
